--- a/student_game.frontend/src/assets/css/style.scss
+++ b/student_game.frontend/src/assets/css/style.scss
@@ -1,28 +1,34 @@
-body {
-    background-color: aquamarine;
+html, body {
+    height: 100%;
 }
 
+#app{
+    height: 100%;
+}
 #main {
     height: 100%;
 }
 
-#container {
-    height: 50%;
-    width: 50%;
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+.container {
+  position: relative;
+  height: 100%;
+  background-color: #F7F7F7;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#login-register-div {
+    padding-top: 20px;
+    max-width: 500px;
+    margin: 0 auto;
+    height: 100%;
 }
 
 #nav-tabContent {
-    margin-top: 50px;
-    margin-bottom: 50px;
+    padding-top: 20px;
 }
 
-#list-tab,.form-group {
-    width: 50%;
-    margin: 0 auto;
+
+.dashboard {
+    min-height: 100%;
+    display: block;
 }
