--- a/student_game.frontend/src/assets/css/style.scss
+++ b/student_game.frontend/src/assets/css/style.scss
@@ -92,6 +92,13 @@ a:active {
     padding: 5px;
 }
 
+.enemie {
+    border: 1px solid black;
+    margin: 10px;
+    padding: 10px;
+    background-color: #eeeeee
+}
+
 @media only screen and (max-width: 768px) {
     .navbar-Items {
         display: none;
