--- a/student_game.frontend/src/assets/css/style.scss
+++ b/student_game.frontend/src/assets/css/style.scss
@@ -50,7 +50,6 @@ a:active {
 
 .navbar {
     background-color: #202124;
-    padding: 16px;
     font-family: sans-serif;
     color: white;
     vertical-align: middle;
@@ -59,6 +58,7 @@ a:active {
 .navbar-Items {
     width: 200px;
     height: 100%;
+    margin-left: 20px;
 }
 
 .nav-btn {
@@ -103,12 +103,12 @@ a:active {
     .navbar-Items {
         display: none;
         height: auto;
+        margin-left: 0px;
     }
 
     .navbar-ToggleShow {
         display: block;
         width: 100%;
-        margin-bottom: 10px;
     }
 
     .navbar-Link-toggle {
